--- a/compose.yml
+++ b/compose.yml
@@ -3,5 +3,5 @@ services:
     image: node:23-bookworm-slim
     container_name: playwright
     volumes:
-      - ./:/codebase:delegated
+      - ./:/workspace:delegated
     command: tail -f /dev/null
