--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,12 @@
 services:
   playwright:
-    image: node:23-bookworm-slim
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: playwright
     container_name: playwright
+    ports:
+      - "9323:9323"
     volumes:
       - ./:/workspace:delegated
     command: tail -f /dev/null
